docker/k8s/pinot-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose -f pinot-docker-compose.yaml convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: pinot
  name: pinot
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: pinot
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose -f pinot-docker-compose.yaml convert
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.service: pinot
    spec:
      containers:
        - args:
            - QuickStart
            - -type
            - batch
          image: apachepinot/pinot:0.7.1
          name: pinot
          ports:
            - containerPort: 9000
            - containerPort: 8000
          resources: {}
      restartPolicy: Always
status: {}
