docker/k8s/pinot-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose -f pinot-docker-compose.yaml convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: pinot
  name: pinot
spec:
  ports:
    - name: "9000"
      port: 9000
      targetPort: 9000
    - name: "8000"
      port: 8000
      targetPort: 8000
  selector:
    io.kompose.service: pinot
status:
  loadBalancer: {}
